tests/tree/var_0.stderr
error: use of undeclared identifier x at line 1
syntax error, line: 1
