tests/tree/var_0.c
void main(char argv[]) { x }
